random forest parameter search

--- a/jupyter_notebooks/random_forest.ipynb
+++ b/jupyter_notebooks/random_forest.ipynb
@@ -2,51 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   GenHealth  PhysHealth  MentHealth  Healthcare  MedCost  Checkup  HighBP  \\\n",
-      "0        5.0        15.0        18.0         1.0      2.0      1.0     1.0   \n",
-      "1        3.0        88.0        88.0         2.0      1.0      4.0     3.0   \n",
-      "2        4.0        15.0        88.0         1.0      2.0      1.0     3.0   \n",
-      "3        5.0        30.0        30.0         1.0      1.0      1.0     1.0   \n",
-      "4        5.0        20.0        88.0         1.0      2.0      1.0     3.0   \n",
-      "\n",
-      "   HighChol  HeartAttack  AngiCoro  Stroke  Asthma  Arthritis  Kidney  Sex  \\\n",
-      "0       1.0          2.0       2.0     2.0     1.0        1.0     2.0  2.0   \n",
-      "1       2.0          2.0       2.0     2.0     2.0        2.0     2.0  2.0   \n",
-      "2       1.0          7.0       2.0     1.0     2.0        1.0     2.0  2.0   \n",
-      "3       1.0          2.0       2.0     2.0     2.0        1.0     2.0  2.0   \n",
-      "4       2.0          2.0       2.0     2.0     2.0        1.0     2.0  2.0   \n",
-      "\n",
-      "   Income  SodiumSalt   Age  Height   Weight  BMI  Education  Alcohol  \\\n",
-      "0     3.0         0.0   9.0   178.0  12701.0  4.0        2.0      1.0   \n",
-      "1     1.0         2.0   7.0   173.0   7484.0  3.0        4.0      1.0   \n",
-      "2    99.0         0.0  11.0   180.0   7167.0  2.0        2.0      9.0   \n",
-      "3     8.0         2.0   9.0   170.0   8165.0  3.0        2.0      1.0   \n",
-      "4    77.0         1.0   9.0   163.0   6441.0  2.0        3.0      1.0   \n",
-      "\n",
-      "   Smoking  FruitCons  VegetCons  PhysActivity  Muscles  \n",
-      "0      3.0        2.0        1.0           4.0      2.0  \n",
-      "1      1.0        2.0        2.0           2.0      2.0  \n",
-      "2      9.0        9.0        9.0           9.0      9.0  \n",
-      "3      4.0        1.0        2.0           4.0      2.0  \n",
-      "4      4.0        9.0        1.0           4.0      2.0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from preprocessing.preprocessing import  get_preprocessed_brfss_train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier\n"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from IPython.core.display_functions import display\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -80,32 +50,8 @@
    ],
    "source": [
     "data_train, data_test, target_train, target_test = get_preprocessed_brfss_train_test_split()\n",
+    "cross_validation = StratifiedKFold(n_splits=10, shuffle=True, random_state=1)\n",
     "data_train.head(10)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "RandomForestClassifier()",
-      "text/html": "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "random_forest_classifier = RandomForestClassifier()\n",
-    "random_forest_classifier.fit(data_train, target_train)"
    ],
    "metadata": {
     "collapsed": false,
@@ -137,15 +83,274 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "random_forest_classifier = RandomForestClassifier()\n",
+    "random_forest_classifier.fit(data_train, target_train)\n",
     "\n",
-    "cross_validation = StratifiedKFold(n_splits=10, shuffle=True, random_state=1)\n",
     "accuracy = cross_val_score(random_forest_classifier, data_train, target_train, cv=cross_validation, scoring='accuracy')\n",
     "\n",
     "for i, acc in enumerate(accuracy):\n",
     "    print(\"Fold {}: Accuracy = {}%\".format(i, acc * 100.0))\n",
     "\n",
     "print(\"Average Accuracy = {}%\".format(accuracy.mean() * 100.0))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Grid search for random forest classifier\n",
+    "Unfortunately the grid search needs an extremely long time, so we decided to use a train/test split to find the best parameters"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "random_forest_classifier = RandomForestClassifier()\n",
+    "parameters = {\n",
+    "    'max_depth': range(5, 10),\n",
+    "    'criterion': [\"gini\", \"entropy\", \"log_loss\"],\n",
+    "    'n_estimators': [100, 150, 200, 250, 300],\n",
+    "    'min_samples_split': range(2,5),\n",
+    "    'min_samples_leaf': range(1,5)\n",
+    "}\n",
+    "\n",
+    "grid_search_estimator = GridSearchCV(random_forest_classifier, parameters, scoring='accuracy', cv=cross_validation, return_train_score=False)\n",
+    "grid_search_estimator.fit(data_train, target_train)\n",
+    "\n",
+    "results = pd.DataFrame(grid_search_estimator.cv_results_)\n",
+    "display(results)\n",
+    "\n",
+    "print(\"best score is {} with params {}\".format(grid_search_estimator.best_score_, grid_search_estimator.best_params_))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This function will be used several times later to evaluate the model with the different parameters"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "def evaluate_random_forest_classifier(estimator: RandomForestClassifier):\n",
+    "    estimator.fit(data_train, target_train)\n",
+    "    predictions = estimator.predict(data_test)\n",
+    "    return accuracy_score(target_test, predictions)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Parameter search\n",
+    "First we search for the best max depth"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max depth 2 --> Accuracy: 0.8429153924566769\n",
+      "Max depth 3 --> Accuracy: 0.8429153924566769\n",
+      "Max depth 4 --> Accuracy: 0.8431305923660664\n",
+      "Max depth 5 --> Accuracy: 0.8439800656926039\n",
+      "Max depth 6 --> Accuracy: 0.8448748442632235\n",
+      "Max depth 7 --> Accuracy: 0.846471854117114\n",
+      "Max depth 8 --> Accuracy: 0.8469928644240571\n",
+      "Max depth 9 --> Accuracy: 0.8475365273530411\n",
+      "Max depth 10 --> Accuracy: 0.8481708007701891\n",
+      "Max depth 11 --> Accuracy: 0.8483406954354966\n",
+      "Max depth 12 --> Accuracy: 0.8489296636085627\n",
+      "Max depth 13 --> Accuracy: 0.8488050741873372\n",
+      "Max depth 14 --> Accuracy: 0.8492468003171367\n",
+      "Max depth 15 --> Accuracy: 0.8491675161399932\n",
+      "Max depth 16 --> Accuracy: 0.8492354740061162\n",
+      "Max depth 17 --> Accuracy: 0.8493260844942803\n",
+      "Max depth 18 --> Accuracy: 0.8485558953448862\n",
+      "Max depth 19 --> Accuracy: 0.8486578321440706\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_depth_parameters = range(2, 20)\n",
+    "for param in max_depth_parameters:\n",
+    "    estimator = RandomForestClassifier(max_depth=param)\n",
+    "    accuracy = evaluate_random_forest_classifier(estimator)\n",
+    "    print(f\"Max depth {param} --> Accuracy: {accuracy}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Criterion gini --> Accuracy: 0.8429153924566769\n",
+      "Criterion entropy --> Accuracy: 0.8429153924566769\n",
+      "Criterion log_loss --> Accuracy: 0.8429153924566769\n"
+     ]
+    }
+   ],
+   "source": [
+    "criterion_parameter = [\"gini\", \"entropy\", \"log_loss\"]\n",
+    "for param in criterion_parameter:\n",
+    "    estimator = RandomForestClassifier(max_depth=2, criterion=param)\n",
+    "    accuracy = evaluate_random_forest_classifier(estimator)\n",
+    "    print(f\"Criterion {param} --> Accuracy: {accuracy}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of estimators 100 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 150 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 200 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 250 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 300 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 350 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 400 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 450 --> Accuracy: 0.8429153924566769\n",
+      "Number of estimators 500 --> Accuracy: 0.8429153924566769\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_of_estimators_parameter = [100, 150, 200, 250, 300, 350, 400, 450, 500]\n",
+    "for param in number_of_estimators_parameter:\n",
+    "    estimator = RandomForestClassifier(max_depth=2, criterion=\"gini\" ,n_estimators=param)\n",
+    "    accuracy = evaluate_random_forest_classifier(estimator)\n",
+    "    print(f\"Number of estimators {param} --> Accuracy: {accuracy}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum samples for split 0.05 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.1 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.15 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.2 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.25 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.3 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.35 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.4 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.45 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for split 0.5 --> Accuracy: 0.8429153924566769\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_samples_split_parameter = [0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5]\n",
+    "for param in min_samples_split_parameter:\n",
+    "    estimator = RandomForestClassifier(max_depth=2, criterion=\"gini\", n_estimators=100 ,min_samples_split=param)\n",
+    "    accuracy = evaluate_random_forest_classifier(estimator)\n",
+    "    print(f\"Minimum samples for split {param} --> Accuracy: {accuracy}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum samples for leaf 0.05 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.1 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.15 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.2 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.25 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.3 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.35 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.4 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.45 --> Accuracy: 0.8429153924566769\n",
+      "Minimum samples for leaf 0.5 --> Accuracy: 0.8429153924566769\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_samples_leaf_parameter = [0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5]\n",
+    "for param in min_samples_leaf_parameter:\n",
+    "    estimator = RandomForestClassifier(max_depth=2, criterion=\"gini\", n_estimators=100, min_samples_split= 0.3, min_samples_leaf=param)\n",
+    "    accuracy = evaluate_random_forest_classifier(estimator)\n",
+    "    print(f\"Minimum samples for leaf {param} --> Accuracy: {accuracy}\")"
    ],
    "metadata": {
     "collapsed": false,
