--- a/jupyter_notebooks/decision_tree.ipynb
+++ b/jupyter_notebooks/decision_tree.ipynb
@@ -2,14 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   GenHealth  PhysHealth  MentHealth  Healthcare  MedCost  Checkup  HighBP  \\\n",
+      "0        5.0        15.0        18.0         1.0      2.0      1.0     1.0   \n",
+      "1        3.0        88.0        88.0         2.0      1.0      4.0     3.0   \n",
+      "2        4.0        15.0        88.0         1.0      2.0      1.0     3.0   \n",
+      "3        5.0        30.0        30.0         1.0      1.0      1.0     1.0   \n",
+      "4        5.0        20.0        88.0         1.0      2.0      1.0     3.0   \n",
+      "\n",
+      "   HighChol  HeartAttack  AngiCoro  Stroke  Asthma  Arthritis  Kidney  Sex  \\\n",
+      "0       1.0          2.0       2.0     2.0     1.0        1.0     2.0  2.0   \n",
+      "1       2.0          2.0       2.0     2.0     2.0        2.0     2.0  2.0   \n",
+      "2       1.0          7.0       2.0     1.0     2.0        1.0     2.0  2.0   \n",
+      "3       1.0          2.0       2.0     2.0     2.0        1.0     2.0  2.0   \n",
+      "4       2.0          2.0       2.0     2.0     2.0        1.0     2.0  2.0   \n",
+      "\n",
+      "   Income  SodiumSalt   Age  Height   Weight  BMI  Education  Alcohol  \\\n",
+      "0     3.0         0.0   9.0   178.0  12701.0  4.0        2.0      1.0   \n",
+      "1     1.0         2.0   7.0   173.0   7484.0  3.0        4.0      1.0   \n",
+      "2    99.0         0.0  11.0   180.0   7167.0  2.0        2.0      9.0   \n",
+      "3     8.0         2.0   9.0   170.0   8165.0  3.0        2.0      1.0   \n",
+      "4    77.0         1.0   9.0   163.0   6441.0  2.0        3.0      1.0   \n",
+      "\n",
+      "   Smoking  FruitCons  VegetCons  PhysActivity  Muscles  \n",
+      "0      3.0        2.0        1.0           4.0      2.0  \n",
+      "1      1.0        2.0        2.0           2.0      2.0  \n",
+      "2      9.0        9.0        9.0           9.0      9.0  \n",
+      "3      4.0        1.0        2.0           4.0      2.0  \n",
+      "4      4.0        9.0        1.0           4.0      2.0  \n"
+     ]
+    }
+   ],
    "source": [
     "from preprocessing.preprocessing import  get_preprocessed_brfss_train_test_split, diabetes_columns\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -23,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -64,21 +98,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "outputs": [
     {
-     "data": {
-      "text/plain": "DecisionTreeClassifier()",
-      "text/html": "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier()</pre></div></div></div></div></div>"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 0: Accuracy = 75.76169441612866%\n",
+      "Fold 1: Accuracy = 75.94291539245668%\n",
+      "Fold 2: Accuracy = 75.82965228225167%\n",
+      "Fold 3: Accuracy = 76.30252576735758%\n",
+      "Fold 4: Accuracy = 75.72205232755691%\n",
+      "Fold 5: Accuracy = 75.98538905878355%\n",
+      "Fold 6: Accuracy = 75.56348397326991%\n",
+      "Fold 7: Accuracy = 76.32517838939857%\n",
+      "Fold 8: Accuracy = 76.10997848000906%\n",
+      "Fold 9: Accuracy = 75.85445278210392%\n",
+      "Average Accuracy = 75.93973228693164%\n"
+     ]
     }
    ],
    "source": [
     "decision_tree_classifier = DecisionTreeClassifier()\n",
-    "decision_tree_classifier.fit(data_train, target_train)"
+    "decision_tree_classifier.fit(data_train, target_train)\n",
+    "\n",
+    "accuracy = cross_val_score(decision_tree_classifier, data_train, target_train, cv=cross_validation, scoring='accuracy')\n",
+    "\n",
+    "for i, acc in enumerate(accuracy):\n",
+    "    print(\"Fold {}: Accuracy = {}%\".format(i, acc * 100.0))\n",
+    "\n",
+    "print(\"Average Accuracy = {}%\".format(accuracy.mean() * 100.0))"
    ],
    "metadata": {
     "collapsed": false,
@@ -89,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "dot_data = tree.export_graphviz(decision_tree_classifier, out_file=None,\n",
@@ -115,77 +164,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Decision tree classifier performance with default options"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 0: Accuracy = 75.89477857061955%\n",
-      "Fold 1: Accuracy = 75.97689432551817%\n",
-      "Fold 2: Accuracy = 75.85230490429267%\n",
-      "Fold 3: Accuracy = 76.50639936572658%\n",
-      "Fold 4: Accuracy = 75.80699966021068%\n",
-      "Fold 5: Accuracy = 76.05051534715143%\n",
-      "Fold 6: Accuracy = 75.7645259938838%\n",
-      "Fold 7: Accuracy = 76.31385207837808%\n",
-      "Fold 8: Accuracy = 76.12979952429494%\n",
-      "Fold 9: Accuracy = 75.85728444003963%\n",
-      "Average Accuracy = 76.01533542101156%\n"
-     ]
-    }
-   ],
-   "source": [
-    "accuracy = cross_val_score(decision_tree_classifier, data_train, target_train, cv=cross_validation, scoring='accuracy')\n",
-    "\n",
-    "for i, acc in enumerate(accuracy):\n",
-    "    print(\"Fold {}: Accuracy = {}%\".format(i, acc * 100.0))\n",
-    "\n",
-    "print(\"Average Accuracy = {}%\".format(accuracy.mean() * 100.0))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
      "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Search for the best parameters\n",
-    "\n",
-    "The search leads to the following parameters to get the best decision tree classifier:\n",
-    "\n",
-    "- criterion: gini\n",
-    "- splitter: best\n",
-    "- max_depth: 7\n",
-    "\n",
-    "The parameter max_depth=7 is particulary interesting. On the one hand this could show that the classifier is learning to always predict \"No diabetes\" (due to the imbalanced dataset) and on the other hand this could indicate that we don't need all 28 features to detect diabetes."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
     }
    }
   },
@@ -211,26 +190,19 @@
    ],
    "source": [
     "decision_tree_classifier = DecisionTreeClassifier()\n",
-    "# specify the parameter grid\n",
     "parameters = {\n",
     "    'max_depth': range(5, 28),\n",
     "    'splitter': [\"best\", \"random\"],\n",
     "    'criterion': [\"gini\", \"entropy\", \"log_loss\"]\n",
     "}\n",
     "\n",
-    "\n",
-    "# create the grid search instance\n",
     "grid_search_estimator = GridSearchCV(decision_tree_classifier, parameters, scoring='accuracy', cv=cross_validation, return_train_score=False)\n",
-    "\n",
-    "# run the grid search\n",
     "grid_search_estimator.fit(data_train, target_train)\n",
     "\n",
-    "# print the results of all hyper-parameter combinations\n",
     "results = pd.DataFrame(grid_search_estimator.cv_results_)\n",
     "display(results)\n",
     "\n",
-    "# print the best parameter setting\n",
-    "print(\"best score is {} with params {}\".format(grid_search_estimator.best_score_, grid_search_estimator.best_params_))"
+    "print(f\"best score is {grid_search_estimator.best_score_} with params {grid_search_estimator.best_params_}\")"
    ],
    "metadata": {
     "collapsed": false,
